[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Resume.gd" type="Script" id=2]
[ext_resource path="res://UI/QuitToMain.gd" type="Script" id=3]
[ext_resource path="res://UI/west_england.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Player/PauseLayer.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 5 )

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.70129
margin_right = 3.70129
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenu"]
margin_left = 830.0
margin_top = 300.0
margin_right = 1080.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 125, 30 )
custom_fonts/font = SubResource( 1 )
text = "Pause menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PauseMenu"]
margin_left = 800.0
margin_top = 420.0
margin_right = 1120.0
margin_bottom = 490.0
rect_pivot_offset = Vector2( 160, 35 )
custom_fonts/font = SubResource( 2 )
text = "Resume"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLevel" type="Button" parent="PauseMenu"]
margin_left = 800.0
margin_top = 520.0
margin_right = 1120.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 3 )
text = "Restart level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitToMain" type="Button" parent="PauseMenu"]
margin_left = 720.0
margin_top = 620.0
margin_right = 1180.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 230, 35 )
custom_fonts/font = SubResource( 4 )
text = "Quit to main menu"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="PauseMenu/QuitToMain" to="." method="_on_QuitToMain_pressed"]
